--- a/RestaurantLib/RestaurantLib.csproj
+++ b/RestaurantLib/RestaurantLib.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BinaryFileRepository.cs" />
     <Compile Include="WaitTime.cs" />
     <Compile Include="XmlRepository.cs" />
     <Compile Include="Client.cs" />
