--- a/RestaurantForm/RestaurantForm.csproj
+++ b/RestaurantForm/RestaurantForm.csproj
@@ -58,6 +58,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WorkDynamics.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WorkDynamics.Designer.cs">
+      <DependentUpon>WorkDynamics.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="DishForm.resx">
       <DependentUpon>DishForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -73,6 +79,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="WorkDynamics.resx">
+      <DependentUpon>WorkDynamics.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
