--- a/RestaurantLib/RestaurantLib.csproj
+++ b/RestaurantLib/RestaurantLib.csproj
@@ -43,6 +43,7 @@
     <Compile Include="BinaryFileRepository.cs" />
     <Compile Include="Dishes.cs" />
     <Compile Include="IDisplayable.cs" />
+    <Compile Include="LinqToXmlRepository.cs" />
     <Compile Include="WaitTime.cs" />
     <Compile Include="XmlRepository.cs" />
     <Compile Include="Client.cs" />
